docs-archive/apache-airflow-providers-amazon/9.39.0/_sources/_api/airflow/providers/amazon/aws/hooks/glue/index.rst.txt
airflow.providers.amazon.aws.hooks.glue
=======================================

.. py:module:: airflow.providers.amazon.aws.hooks.glue


Attributes
----------

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.glue.DEFAULT_LOG_SUFFIX
   airflow.providers.amazon.aws.hooks.glue.ERROR_LOG_SUFFIX


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.glue.GlueJobHook
   airflow.providers.amazon.aws.hooks.glue.GlueDataQualityHook


Functions
---------

.. autoapisummary::

   airflow.providers.amazon.aws.hooks.glue.get_glue_log_group_names
   airflow.providers.amazon.aws.hooks.glue.format_glue_logs


Module Contents
---------------

.. py:data:: DEFAULT_LOG_SUFFIX
   :value: 'output'


.. py:data:: ERROR_LOG_SUFFIX
   :value: 'error'


.. py:function:: get_glue_log_group_names(job_run)

   Extract the output and error CloudWatch log group names from a Glue job run response.


.. py:function:: format_glue_logs(fetched_logs, log_group)

   Format fetched CloudWatch log messages for display.

   Shared between ``GlueJobHook.print_job_logs`` and ``GlueJobCompleteTrigger._forward_logs``
   so that both the sync and async paths produce identical output.


.. py:class:: GlueJobHook(s3_bucket = None, job_name = None, desc = None, concurrent_run_limit = 1, script_location = None, retry_limit = 0, num_of_dpus = None, iam_role_name = None, iam_role_arn = None, create_job_kwargs = None, update_config = False, job_poll_interval = 6, api_retry_args = None, *args, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`


   Interact with AWS Glue.

   Provide thick wrapper around :external+boto3:py:class:`boto3.client("glue") <Glue.Client>`.

   :param s3_bucket: S3 bucket where logs and local etl script will be uploaded
   :param job_name: unique job name per AWS account
   :param desc: job description
   :param concurrent_run_limit: The maximum number of concurrent runs allowed for a job
   :param script_location: path to etl script on s3
   :param retry_limit: Maximum number of times to retry this job if it fails
   :param num_of_dpus: Number of AWS Glue DPUs to allocate to this Job
   :param iam_role_name: AWS IAM Role for Glue Job Execution. If set `iam_role_arn` must equal None.
   :param iam_role_arn: AWS IAM Role ARN for Glue Job Execution, If set `iam_role_name` must equal None.
   :param create_job_kwargs: Extra arguments for Glue Job Creation
   :param update_config: Update job configuration on Glue (default: False)
   :param api_retry_args: An optional dictionary with arguments passed to ``tenacity.Retrying`` & ``tenacity.AsyncRetrying`` classes.

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       - :class:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`


   .. py:class:: LogContinuationTokens

      Used to hold the continuation tokens when reading logs from both streams Glue Jobs write to.


      .. py:attribute:: output_stream_continuation
         :type:  str | None
         :value: None



      .. py:attribute:: error_stream_continuation
         :type:  str | None
         :value: None




   .. py:attribute:: job_name
      :value: None



   .. py:attribute:: desc
      :value: None



   .. py:attribute:: concurrent_run_limit
      :value: 1



   .. py:attribute:: script_location
      :value: None



   .. py:attribute:: retry_limit
      :value: 0



   .. py:attribute:: s3_bucket
      :value: None



   .. py:attribute:: role_name
      :value: None



   .. py:attribute:: role_arn
      :value: None



   .. py:attribute:: s3_glue_logs
      :value: 'logs/glue-logs/'



   .. py:attribute:: create_job_kwargs


   .. py:attribute:: update_config
      :value: False



   .. py:attribute:: job_poll_interval
      :value: 6



   .. py:attribute:: retry_config
      :type:  dict[str, Any]


   .. py:method:: create_glue_job_config()


   .. py:method:: describe_jobs()

      Get list of Jobs.

      .. seealso::
          - :external+boto3:py:meth:`Glue.Client.get_jobs`



   .. py:method:: list_jobs()

      Get list of Jobs.

      .. deprecated::
          - Use :meth:`describe_jobs` instead.



   .. py:method:: get_iam_execution_role()


   .. py:method:: initialize_job(script_arguments = None, run_kwargs = None)

      Initialize connection with AWS Glue to run job.

      .. seealso::
          - :external+boto3:py:meth:`Glue.Client.start_job_run`



   .. py:method:: get_job_state(job_name, run_id)

      Get state of the Glue job; the job state can be running, finished, failed, stopped or timeout.

      .. seealso::
          - :external+boto3:py:meth:`Glue.Client.get_job_run`

      :param job_name: unique job name per AWS account
      :param run_id: The job-run ID of the predecessor job run
      :return: State of the Glue job



   .. py:method:: async_get_job_state(job_name, run_id)
      :async:


      Get state of the Glue job; the job state can be running, finished, failed, stopped or timeout.

      The async version of get_job_state.



   .. py:property:: logs_hook

      Returns an AwsLogsHook instantiated with the parameters of the GlueJobHook.



   .. py:method:: print_job_logs(job_name, run_id, continuation_tokens)

      Print the latest job logs to the Airflow task log and updates the continuation tokens.

      :param continuation_tokens: the tokens where to resume from when reading logs.
          The object gets updated with the new tokens by this method.



   .. py:method:: job_completion(job_name, run_id, verbose = False, sleep_before_return = 0)

      Wait until Glue job with job_name finishes; return final state if finished or raises AirflowException.

      :param job_name: unique job name per AWS account
      :param run_id: The job-run ID of the predecessor job run
      :param verbose: If True, more Glue Job Run logs show in the Airflow Task Logs.  (default: False)
      :param sleep_before_return: time in seconds to wait before returning final status.
      :return: Dict of JobRunState and JobRunId



   .. py:method:: async_job_completion(job_name, run_id, verbose = False)
      :async:


      Wait until Glue job with job_name finishes; return final state if finished or raises AirflowException.

      :param job_name: unique job name per AWS account
      :param run_id: The job-run ID of the predecessor job run
      :param verbose: If True, more Glue Job Run logs show in the Airflow Task Logs.  (default: False)
      :return: Dict of JobRunState and JobRunId



   .. py:method:: has_job(job_name)

      Check if the job already exists.

      .. seealso::
          - :external+boto3:py:meth:`Glue.Client.get_job`

      :param job_name: unique job name per AWS account
      :return: Returns True if the job already exists and False if not.



   .. py:method:: update_job(**job_kwargs)

      Update job configurations.

      .. seealso::
          - :external+boto3:py:meth:`Glue.Client.update_job`

      :param job_kwargs: Keyword args that define the configurations used for the job
      :return: True if job was updated and false otherwise



   .. py:method:: update_tags(job_name, job_tags)

      Reconcile a job's tags with the desired set.

      Glue manages tags outside of ``update_job``, so adds/updates go through
      ``tag_resource`` and removals through ``untag_resource``.

      .. seealso::
          - :external+boto3:py:meth:`Glue.Client.tag_resource`
          - :external+boto3:py:meth:`Glue.Client.untag_resource`

      :param job_name: Name of the job for which to update tags
      :param job_tags: Desired tags. Keys absent from this mapping are removed from the job.
      :return: True if any tag was added, changed, or removed, False otherwise



   .. py:method:: get_or_create_glue_job()

      Get (or creates) and returns the Job name.

      .. seealso::
          - :external+boto3:py:meth:`Glue.Client.create_job`

      :return:Name of the Job



   .. py:method:: create_or_update_glue_job()

      Create (or update) and return the Job name.

      .. seealso::
          - :external+boto3:py:meth:`Glue.Client.update_job`
          - :external+boto3:py:meth:`Glue.Client.create_job`

      :return:Name of the Job



.. py:class:: GlueDataQualityHook(*args, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`


   Interact with AWS Glue Data Quality.

   Provide thick wrapper around :external+boto3:py:class:`boto3.client("glue") <Glue.Client>`.

   Additional arguments (such as ``aws_conn_id``) may be specified and
   are passed down to the underlying AwsBaseHook.

   .. seealso::
       - :class:`airflow.providers.amazon.aws.hooks.base_aws.AwsBaseHook`


   .. py:method:: has_data_quality_ruleset(name)


   .. py:method:: get_evaluation_run_results(run_id)


   .. py:method:: validate_evaluation_run_results(evaluation_run_id, show_results = True, verify_result_status = True)


   .. py:method:: log_recommendation_results(run_id)

      Print the outcome of recommendation run, recommendation run generates multiple rules against a data source (Glue table) in Data Quality Definition Language (DQDL) format.

      Rules = [
      IsComplete "NAME",
      ColumnLength "EMP_ID" between 1 and 12,
      IsUnique "EMP_ID",
      ColumnValues "INCOME" > 50000
      ]



